--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,11 @@
   "name": "pack-calculator-frontend",
   "version": "1.0.0",
   "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
