--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,16 +1,20 @@
-FROM node:latest AS builder
+FROM node:20-alpine AS builder
 
 WORKDIR /app
 
-COPY package.json ./
-RUN npm install
+ARG VITE_API_URL=/api
+ENV VITE_API_URL=$VITE_API_URL
+
+COPY package.json package-lock.json* ./
+RUN npm ci
 
 COPY . .
 RUN npm run build
 
-FROM nginx:latest
+FROM nginx:alpine
 
 COPY --from=builder /app/dist /usr/share/nginx/html
+COPY nginx-frontend.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 
