--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "axios": "^1.7.7"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@types/node": "^25.2.0",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
